--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.633.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "netlify-lambda": "^1.6.3",
     "serverless-http": "^2.3.2"
   }
