--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "html": "^1.0.0",
     "netlify-lambda": "^1.6.3",
     "serverless-http": "^2.3.2"
   }
